# vault

./: .env.example  .gitignore  BUILD_LOG_IAN_V1.md  CODEOWNERS  README.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  start.sh  turbo.json
.claude/: AGENTS.md  (+2 more)
apps/api/: Dockerfile  Dockerfile.worker  pyproject.toml
apps/api/.claude/: settings.local.json
apps/api/alembic/versions/: 001_users_and_accounts.py  002_transactions.py  003_categories.py  004_recurring_groups.py  005_system_logs.py  006_imports.py  007_insights.py  008_enum_to_varchar.py  009_add_check_constraints.py
apps/api/app/: config.py  database.py  main.py
apps/api/app/ai/: __init__.py  base.py  cancel_helper.py  categoriser.py  client.py  subscription_detector.py
apps/api/app/middleware/: auth.py  logging.py
apps/api/app/models/: __init__.py  account.py  base.py  category.py  import_record.py  insight.py  recurring_group.py  system_log.py  transaction.py  user.py
apps/api/app/routes/: accounts.py  analytics.py  auth.py  categories.py  debug.py  imports.py  subscriptions.py  transactions.py
apps/api/app/schemas/: __init__.py  account.py  category.py  common.py  import_record.py  recurring_group.py  transaction.py  user.py
apps/api/scripts/: seed_categories.py  seed_demo_data.py
apps/api/tests/: test_ai_client.py  test_auth.py  test_cancel_helper.py  test_categoriser.py  test_health.py  test_parser_amex.py  test_parser_hsbc.py  test_parser_monzo.py  test_parser_starling.py  test_subscription_detector.py  test_subscriptions.py  test_transactions.py
(+92 files in other folders)
